2011-05-22  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/USAGE, atari800.man, cassette.[ch], ui.c: Add an option for making the
  attached cassette image read-only.

* cassette.[ch]: Cleanup - rearrange function order to place the functions
  related to the SIO patch together at the bottom of the files.


2011-05-21  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sio.c: Fixed a bug with SIO sounds remaining audible after saving to tape
  with SIO patch (reported by Krzysztof Karkosza).

* atari.c: During coldstart, don't automatically hold Option on non-XL/XE
  machines. This fixes unwanted keystrokes when running cartridges on 400/800
  with the "Disable Basic" option. Also, don't hold Start on booting the 5200.

* memory.c: Bugfix: When "Selecting System" and choosing 800/48KB RAM twice
  in a row, BASIC would get disabled even if the "Disable BASIC" option was
  set to "No". This was caused by missing initialisation of cartridge memory
  in MEMORY_InitialiseMachine().


2011-05-18  Tomasz Krasuski <kr0tki@poczta.onet.pl>
* cassette.c: Fixed a bug with CASSETTE_description not being properly ended
  with '\0' when tape is inserted (reported by Achim Haertel).


2011-05-15  Tomasz Krasuski <kr0tki@poczta.onet.pl>
* cassette.[ch], pokey.c, sio.c: Improve cassette emulation, to allow loading
  some non-standard tapes (e.g. Feud/Turbo 2600, Miecze Valdgira II,
  Operation Blood).
  Emulation of SERIN was inaccurate - new byte appeared in SERIN only if the
  serial input IRQ was enabled, and it happened 2 scanlines after the byte's
  transmission has _started_. On a real machine, a byte appears in
  SERIN at the same time the serial input IRQ is generated, that is, when
  the byte's transmission _ends_; and it happens even when the IRQ is
  disabled. The bug caused issues with tapes of _certain_ baudrates (e.g. 577
  baud).
  Changed the way cassette IRQ is invoked - there is no notion of
  "cassette IRQ delay" anymore. Instead, CASSETTE_AddScanLine returns TRUE